fix(LitCards): align author icon with author name

--- a/src/components/styles/_app-literature.css
+++ b/src/components/styles/_app-literature.css
@@ -94,6 +94,7 @@
     transition    : background var(--lit-transition-speed),
                     border var(--lit-transition-speed);}
   & .ux-icon {
+    position     : relative;
     top          : 2px;
     left         : 3px;
     margin-right : 7px;
